--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("/Users/anushtha/Downloads/New Portfolio/Github Portfolio Items/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1LzQwMy1tY2tpbnNleS0yMWEwODkzLWNhcmQuanBn.webp") top center;
+  background: url("/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1LzQwMy1tY2tpbnNleS0yMWEwODkzLWNhcmQuanBn.webp") top center;
   background-size: cover;
 }
 
