--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,7 +307,7 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 30px 0;
   overflow: hidden;
 }
 
@@ -1140,4 +1140,10 @@ section {
     width: auto;
     padding-right: 20px 15px;
   }
+}
+
+.custom-list {
+  display: inline-block;
+  width: 49%;
+  vertical-align: top;
 }
