--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -673,7 +673,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-slider img {
-  width: 55%;
+  width: 90%;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination {
@@ -694,7 +694,7 @@ section {
 }
 
 .portfolio-details .portfolio-info {
-  padding: 30px;
+  padding: 15px;
   box-shadow: 0px 0 30px rgba(5, 13, 24, 0.08);
 }
 
@@ -717,7 +717,8 @@ section {
 }
 
 .portfolio-details .portfolio-description {
-  padding-top: 30px;
+  /* padding-top: 30px; */
+  padding: 15px 10px 0 10px;
 }
 
 .portfolio-details .portfolio-description h2 {
@@ -1146,4 +1147,8 @@ section {
   display: inline-block;
   width: 49%;
   vertical-align: top;
+}
+
+button.check-out {
+  float: right;
 }
