Set margin bottom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -569,6 +569,7 @@ section {
 --------------------------------------------------------------*/
 .portfolio .portfolio-item {
   margin: auto;
+  margin-bottom: 20px;
 }
 
 .portfolio #portfolio-flters {
